snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.jar.md5
1afef0b46c8959d3aecdab5d86a46a6e